jira_clone/force-app/main/default/objects/Subtask__c/fields/CurrentState__c.field-meta.xml
<CustomField>
    <fullName>CurrentState__c</fullName>
    <description>Current status</description>
    <label>Current State</label>
    <referenceTo>Status__c</referenceTo>
    <relationshipLabel>Subtasks</relationshipLabel>
    <relationshipName>Subtasks</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>