jira_clone/force-app/main/default/objects/Subtask__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Subtask end date</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>