jira_clone/force-app/main/default/objects/Subtask__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Subtask start date</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>