jira_clone/force-app/main/default/objects/Subtask__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Ticket reference</description>
    <label>Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Subtasks</relationshipLabel>
    <relationshipName>Subtasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>